🤗🔁 Updated with Glitch

--- a/index.html
+++ b/index.html
@@ -3,14 +3,14 @@ Requirements
 [ y ] Two Different Headlines
 [ y ] Bold and Italic Text
 [ y ] One List
-[  ] Three Images
+[ y ] Three Images
 
 Select ONE Additional Feature to Add  
 [ no ] Feature 1 - Include at least three emojis
 [ no ] Feature 2 - Include <font> tag
 [ no ] Feature 3 - Include Underline & Highlight
 [ no ] Feature 4 - Use Square Bullets
-[ no ] Feature 5 - Include a list within a list
+[ yes] Feature 5 - Include a list within a list
 -->
     
 <!DOCTYPE HTML>
@@ -46,9 +46,13 @@ want to do that for others as well. Operas and arias that I want to sing in are:
     <li>Turandot</li>
     <li>Tosca</li>
   </ul>  
-<h3>
-  College!
-         </h3>
+<img src="https://media.wnyc.org/i/1860/1240/c/80/2020/01/LA_BOHEME_10_18_19_EVAN_ZIMMERMAN_3703_v002.jpg"
+     width="350"
+         
+         <h2>
+  <p>
+    <b>College!</b></p>
+         </h2>
          <p> Something that really came in handy in recent years was my 8 years of experience of 
 piano. That's because learning basically any instrument helps with theory and learning
 the basics of music. However, I've hit a wall in my progress which is why I'm pursuing
